<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Agonia</string>
    <string name="blank">_</string>
    <string name="divider">divider</string>
    <string name="dlg_ace_title">Pick a suit</string>
    <string name="dlg_finish_title">Game finished!</string>
    <string name="dlg_seven_btn_draw">Draw (%d)</string>
    <string name="dlg_seven_btn_play">Play it!</string>
    <string name="dlg_seven_title">Choose a Seven or draw</string>
    <string name="exit">Exit</string>
    <string name="dlg_finish_btn_play_again">Play again</string>
    <string name="default_p1_name">Player</string>
    <string name="default_p2_name">Cpu</string>
    <string name="default_difficult_mode">2</string>
    <string name="key_p1_name">p1_name</string>
    <string name="key_p2_name">p2_name</string>
    <string name="key_p1_score">p1_score</string>
    <string name="key_p2_score">p2_score</string>
    <string name="key_p1_wins">p1_wins</string>
    <string name="key_p2_wins">p2_wins</string>
    <string name="key_is_nine_special">nine_special</string>
    <string name="key_difficult">difficult</string>
    <string name="key_reset_dlg">reset_dlg</string>
    <string name="key_deck_finish">deck_finish</string>
    <string name="key_color_hints">color_hints</string>
    <string name="key_ace_on_ace">ace_on_ace</string>
    <string name="key_ace_finish">ace_finish</string>
    <string name="pref_general_title">General</string>
    <string name="pref_ingame_title">In-game</string>
    <string name="pref_p1_name_title">Your name</string>
    <string name="pref_p2_name_title">Opponent\'s name</string>
    <string name="pref_nine_title">Nine-Jump</string>
    <string name="pref_nine_summ">When Nine played, next player losses his turn</string>
    <string name="pref_difficult_title">Difficulty</string>
    <string name="pref_reset_title">Reset scores</string>
    <string name="pref_reset_dlg_message">Are you sure, you wish to reset both scores?\n<b>This action cannot be undone!</b></string>
    <string name="mode_monkey">Monkey</string>
    <string name="mode_easy">Easy</string>
    <string name="mode_moderate">Moderate</string>
    <string name="mode_megamind">MegaMind !</string>
    <string name="pref_name_aborted_message" formatted="false">Names length should between %d and %d\nwithout any punctuation character or whitespace </string>
    <string name="menu_btn_new_game">New game</string>
    <string name="menu_btn_pref">Preferences</string>
    <string name="menu_btn_how_to_play">How to play</string>
    <string name="menu_btn_about">About</string>
    <string name="pref_deck_finish_title">When deck is finished</string>
    <string name="deck_finish_recycle">Use already played cards as deck</string>
    <string name="deck_finish_pick_new">Pick a new deck</string>
    <string name="deck_finish_finish_game">Finish the game</string>
    <string name="points">Points</string>
    <string name="draw">Draw</string>
    <string name="wins">Wins</string>
    <string name="winner">Winner: %s</string>
    <string name="total">Total</string>
    <string name="hand_and_score" formatted="false"> %s= %d %s</string>
    <string name="how_overview_title">Game Overview</string>
    <string name="how_rules_title">Rules</string>
    <string name="how_overview_content">On game start 7 cards are dealt to each player. A card is placed faced up at the table, while the rest of the deck is placed upside down.\nAim of each player is to throw all cards of his hand. When a player throws his last card, then the game ends. His opponent gets 0 points, while he gets points, depending on the sum of points of each card is left in the hands of the opponent.\nEach card (2 to 10) has as many points as its number. Face cards (jack, queen and king - J, Q, K) are by 10 points. Aces (A) with 20 points.</string>
    <string name="how_rules_content">Each player must throw a card that has either the same number or the same suit with the card which is faced up the table. If he have not any corresponding card, then he must draw a card from the deck. If he still do not find an appropriate card then he say "passo".\nEach player may draw cards from the deck even he have cards available to play. May also say passo even if he have card available to play. In any case, before a player say passo should have draw a card from the deck.</string>
    <string name="how_special_card_title">Special Cards</string>
    <string name="how_special_card_ace_title">Ace</string>
    <string name="how_special_card_seven_title">Seven</string>
    <string name="how_special_card_eight_title">Eight</string>
    <string name="how_special_card_content">Some cards don\'t follows the normal rules and have some special effects.</string>
    <string name="how_special_card_ace_content">Ace can be played over any card (regardless of suit and rank). If a player play an ace then he can choose any suit he wants. The next player will play with the claimed suit.</string>
    <string name="how_special_card_seven_content">If a player play 7, then the next player draws two cards from the deck, unless he has 7, so playing it the next player will draw 4 cards from the deck and so until a player has no 7. If the player who gets the cards do not have an appropriate card to play, then he must draw a card from the deck. If a player draw cards after of the previously played 7 and finds a 7 in these cards, he can play it, but it would act as the first 7 (the next player will draw 2 cards).</string>
    <string name="how_special_card_eight_content">If a player play 8 he must play again. If he have not any corresponding card, then he must draw a card from the deck. If he still do not find an appropriate card then he say "passo". A player can play as many 8s in a row as he wants to.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="how_cpu_cards">These are your opponent cards</string>
    <string name="how_your_cards">These are your cards</string>
    <string name="how_deck">Deck</string>
    <string name="done">Done</string>
    <string name="pref_color_hints_title">Color hints</string>
    <string name="pref_color_hints_summ">Varius color hints to guide you in game</string>
    <string name="pref_ace_on_ace_title">Ace-On-Ace</string>
    <string name="pref_ace_on_ace_summ">Ace could be played on top of Ace</string>
    <string name="pref_ace_finish_title">Ace The Last</string>
    <string name="pref_ace_finish_summ">Allow players to go out with Ace</string>
    <string name="dlg_exit_title">Quit game?</string>
    <string name="dlg_exit_message">If you quit the game, it will count as lose!!\nAre you sure?</string>
    <string name="cpu1">Cpu1</string>
    <string name="cpu2">Cpu2</string>
    <string name="cpu3">Cpu3</string>
    <string name="friend">Friend</string>
    <string name="set_type_goal">Set Type/Goal</string>
    <string name="players">Players</string>
    <string name="set_btn_start">Start new set</string>
    <string name="set_btn_continue_next">Start next game</string>
    <string name="set_btn_continue_winner">Show winner team</string>
    <string name="winner_team">Winner team: %s</string>
    <string name="teams">Teams</string>
    <string name="set_info" formatted="false">Type: %s, Goal: %d, Round: %d</string>
    <string name="set_player_info" formatted="false">%d. %s [%s]</string>
    <string name="set_team_info" formatted="false">%s: %d\n%s: %d</string>
    <string name="dlg_rate_title">You like Agonia?</string>
    <string name="dlg_rate_message">If you enjoy to play Agonia, please rate it with five stars and a good comment!!\nIf you dont, say me what you didn\'t like and i will fix it soon.\nThank you!!</string>
    <string name="dlg_about_message"><![CDATA[<font color="white">Old-style Deck icons downloaded from: <a href="http://freeware.esoterica.free.fr/html/freecards.html" target="_blank">freeware.esoterica.free.fr</a><br />(Authors: Jesse Fuchs and Tom Hart)<br /><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/gr/deed.en">Creative Commons Attribution 3.0 Greece License</a>.</font><br /> ]]></string>
    <string name="dlg_comming_soon_message">➤save/load GameSet/Game\n➤hard mode\n➤more preferences for more special cards\n➤game history when game finished\n</string>
    <string name="custom_font">fonts/BLACKR.ttf</string>
    <string name="key_p3_name">p3_name</string>
    <string name="key_p4_name">p4_name</string>
    <string name="dlg_change_name_title">Set new name for "%s"</string>
    <string name="key_old_deck">old_deck</string>
    <string name="pref_old_deck_summ">Use old-style deck</string>
    <string name="pref_old_deck_title">Old-style deck</string>
    <string name="key_old_anim">old_anim</string>
    <string name="pref_old_anim_summ">Use low quality animations for CPUs</string>
    <string name="pref_old_anim_title">Low quality animations</string>
    <string name="pref_player_turn_default_color">red</string>
    <string name="key_player_turn_color1">key_player_turn_color1</string>
    <string name="pref_player_turn_color_title1">Player\'s turn color</string>
    <string name="key_player_turn_color2">key_player_turn_color2</string>
    <string name="pref_player_turn_color_title2">Player\'s turn flashing color</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_black">Black</string>
    <string name="color_none">None</string>
    <string name="key_game_music">key_music</string>
    <string name="pref_game_music_title">Background music</string>
    <string name="key_game_sfx">key_sfx</string>
    <string name="pref_game_sfx_title">Game sound effects</string>
    <string name="dlg_set_load_title">Load game</string>
    <string name="dlg_set_delete_games_title">Select saved games to delete</string>
    <string name="dlg_btn_set_delete_games_delete">Delete</string>
    <string name="set_toast_on_delete_games">%d saved games deleted</string>
    <string name="set_toast_on_save_game">Saved as %s</string>
    <string name="set_toast_no_saved_games">No saved games found. . .</string>
    <string name="stats_games_infos_emptry">\n\n\n\n\nNo stats recorded yet. . .</string>
    <string name="stats_games_infos" formatted="false">Games: %d\n\t\t\t\t\t\tWon / Lost\n\t1v1:%12d / %d\n\t1v1v1:%8d / %d\n\t2v2:%12d / %d\n\nSets: %d\n\t\t\t\t\t\tWon / Lost\n\t1v1:%12d / %d\n\t1v1v1:%8d / %d\n\t2v2:%12d / %d\n\nCards Played: %d\nAces: %d\nSevens: %d\nEights: %d\nNines: %d\n\nCards drawn: %d (drawn from sevens are excluded)\nDrawn from sevens: %d\n\nPasso %d times\n\nTotal points: %d\nMax points gained: %d</string>
    <string name="dlg_finish_btn_history">Game history. . .</string>
    <string name="dlg_history_title">Game history</string>
    <string name="drew_cards">drew %d</string>
    <string name="key_nine_finish">nine_finish</string>
    <string name="pref_nine_finish_title">Nine The Last</string>
    <string name="pref_nine_finish_summ">Players can go out with Nine</string>
    <string name="key_seven_finish">seven_finish</string>
    <string name="pref_seven_finish_title">Seven The Last</string>
    <string name="pref_seven_finish_summ">If a player go out with Seven, next player will not draw card</string>
    <string name="key_eight_finish">eight_finish</string>
    <string name="menu_btn_online">Online Game</string>
    <string name="leaderboard_elo_points">CgkIrd-ijrYVEAIQAQ</string>
    <string name="leaderboard_game_points">CgkIrd-ijrYVEAIQAg</string>
    <string name="leaderboard_total_online_wins">CgkIrd-ijrYVEAIQAw</string>
    <string name="leaderboard_best_winning_streak">CgkIrd-ijrYVEAIQBA</string>
</resources>