<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="general"
        android:title="@string/pref_general_title" >
        <EditTextPreference
            android:defaultValue="@string/default_p1_name"
            android:dialogTitle="@string/pref_p1_name_title"
            android:key="@string/key_p1_name"
            android:title="@string/pref_p1_name_title" />
        <EditTextPreference
            android:defaultValue="@string/default_p2_name"
            android:dialogTitle="@string/pref_p2_name_title"
            android:key="@string/key_p2_name"
            android:title="@string/pref_p2_name_title" />

        <devN.games.agonia.pref.ResetScoresDlgPref
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:key="@string/key_reset_dlg"
            android:title="@string/pref_reset_title" /> 
       <!-- android:dialogMessage="@string/pref_reset_dlg_message" -->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="ingame"
        android:title="@string/pref_ingame_title" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/difficult_modes"
            android:entryValues="@array/difficult_modes_values"
            android:key="@string/key_difficult"
            android:title="@string/pref_difficult_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_is_nine_special"
            android:summary="@string/pref_nine_summ"
            android:title="Nine-Jump" />
    </PreferenceCategory>

</PreferenceScreen>