<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/how_page2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tsoha" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/how_page_padding" >

        <TextView
            style="@style/how_title"
            android:text="@string/how_rules_title" />

        <ImageView
            style="@style/how_divider"
            android:contentDescription="@string/divider" />

        <TextView
            style="@style/how_content"
            android:text="@string/how_rules_content" />
    </LinearLayout>

</ScrollView>