<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/tsoha"
    android:layoutAnimation="@anim/menu_in_delayed" >

    <!-- inner layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layoutAnimation="@anim/menu_in"
        android:orientation="vertical" >

        <devN.etc.LeadBoltAdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:contentDescription="Menu ad" />

        <Button
            android:id="@+id/btnOnlineGame"
            style="@style/menu_button"
            android:text="@string/menu_btn_online" />

        <Button
            android:id="@+id/btGame"
            style="@style/menu_button"
            android:layout_marginTop="@dimen/menu_btn_top_marg"
            android:text="@string/menu_btn_new_game" />

        <Button
            android:id="@+id/btPref"
            style="@style/menu_button"
            android:layout_marginTop="@dimen/menu_btn_top_marg"
            android:text="@string/menu_btn_pref" />

        <Button
            android:id="@+id/btHow"
            style="@style/menu_button"
            android:layout_marginTop="@dimen/menu_btn_top_marg"
            android:text="@string/menu_btn_how_to_play" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_side_icons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/ibtStats"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_stats" />

        <ImageButton
            android:id="@+id/ibtFacebook"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/ibtRate"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_rate" />

        <ImageButton
            android:id="@+id/ibtAbout"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_about" />

        <ImageButton
            android:id="@+id/ibtExit"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_x" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_left_side_icons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/ibtn_player"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_player" />

        <ImageButton
            android:id="@+id/ibtn_leaderboards_elo"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_crown_elo"
            android:tag="@string/leaderboard_elo_points" />

        <ImageButton
            android:id="@+id/ibtn_leaderboards_winning_streak"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_crown_winning_streak"
            android:tag="@string/leaderboard_best_winning_streak" />

        <ImageButton
            android:id="@+id/ibtn_leaderboards_wins"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_crown_wins"
            android:tag="@string/leaderboard_total_online_wins" />

        <ImageButton
            android:id="@+id/ibtn_leaderboards_points"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_crown_points"
            android:tag="@string/leaderboard_game_points" />

        <ImageButton
            android:id="@+id/ibtn_signout"
            style="@style/menu_side_icon"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_signout" />
    </LinearLayout>

</RelativeLayout>