<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/tsoha"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/txv_set_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/teams"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txv_set_t1p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_player_info"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txv_set_t1p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_player_info"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/txv_set_t1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/set_team_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txv_set_t2p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_player_info"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txv_set_t2p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_player_info"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/txv_set_t2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/set_team_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set_team3_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/txv_set_t3p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_player_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txv_set_t3_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/set_team_info"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <Button
        android:id="@+id/set_btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ad_top_bottom_margin"
        android:background="@drawable/btn_menu"
        android:text="@string/set_btn_continue_next"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <include
        android:layout_gravity="center"
        android:layout_weight="1"
        layout="@layout/ad_in_dialog" />

</LinearLayout>